# locakepeer

./: .gitignore  asset-manifest.json  index.html
back/: .env.example  alembic.ini  docker-compose.yaml  pyproject.toml
back/app/: Dockerfile  main.py  req.txt
back/app/alembic/: env.py
back/app/alembic/versions/: 2024_10_09_2205-fecb423eedbb_init.py  2024_10_12_1423-e5d337eadb0e_init.py  2024_10_12_1439-8256b07413c8_change_place_to_marker.py  2024_10_12_1543-ce2542e14f2d_place_w_marker_rel.py
back/app/core/: config.py
back/app/db/: db.py  schemas.py
back/app/db/alembic/: env.py
back/app/db/gs/: db.py  schemas.py
back/app/db/psql/: crud.py  db.py  models.py  schemas.py
back/app/src/: __init__.py
back/app/src/marker/: api.py  crud.py  models.py  schemas.py
back/app/src/place/: api.py  crud.py  models.py  schemas.py
back/app/src/user/: api.py  crud.py  db.py  manager.py  models.py  schemas.py  types.py  users.py
back/app/src/user/auth/: __init__.py  srategies.py  transport.py
front/: package-lock.json  package.json
front/public/: index.html
front/src/: App.js  data.js  data.json
front/src/components/: KakaoMap.js  OverlayContent.js
front/src/components/BottomPanel/: BottomPanel.css  BottomPanel.js
static/css/: main.3d77f621.css  main.3d77f621.css.map  main.a4361d9d.css  main.a4361d9d.css.map  main.f18528b9.css  main.f18528b9.css.map
static/js/: main.64e44af6.js  main.64e44af6.js.LICENSE.txt  main.64e44af6.js.map  main.65c70190.js  main.65c70190.js.LICENSE.txt  main.65c70190.js.map  main.67f173b2.js  main.67f173b2.js.map
(+5 files in other folders)
